# Database

./: .gitignore  CMakeLists.txt  README.md  Test[1]_include.cmake  Test[1]_tests.cmake  main.cpp  queries.txt  res.txt  select.txt
MEMDB/Database/: Create.cpp  Database.cpp  Database.h  Delete.cpp  Insert.cpp  Join.cpp  Select.cpp  Update.cpp
MEMDB/MathExpression/: MathExpression.cpp  MathExpression.h  SyntaxTree.cpp  SyntaxTreeNode.cpp
MEMDB/Preprocessor/: Preprocessor.cpp  Preprocessor.h
MEMDB/Result/: Result.cpp  Result.h
MEMDB/Table/: Table.cpp  Table.h
MEMDB/Token/: Token.cpp  Token.h
Tests/: FuncTests.cpp
docs/: Description.md  Differences.md
